Fix sidebar layout issue

--- a/app/assets/stylesheets/tenon/layout/sidebar.css.scss
+++ b/app/assets/stylesheets/tenon/layout/sidebar.css.scss
@@ -5,7 +5,7 @@
     display: none;
 
     &.mobile-open {
-      position: absolute;
+      position: fixed;
       left: 50%;
       display: block;
       float: left;
